--- a/app/index.html
+++ b/app/index.html
@@ -1,23 +1,31 @@
 <!doctype html>
 
-<html lang="en">
+<html class="no-js" lang="en">
 <head>
   <meta charset="utf-8">
 
   <title>GAB</title>
-  <meta name="description" content="html5 app">
-  <meta name="author" content="akrfranko">
-
+  <meta name="description" content="GAB Concierge App">
+  <meta name="author" content="Francois Lafortune, @akrfranko">
+  <meta name="viewport" content="width=device-width">
 
   <link href='http://fonts.googleapis.com/css?family=Ubuntu:300,400,500,700,300italic,400italic,500italic,700italic&subset=latin,latin-ext' rel='stylesheet' type='text/css'>
   <link href="http://maxcdn.bootstrapcdn.com/font-awesome/4.2.0/css/font-awesome.min.css" rel="stylesheet">
   <script src="http://code.jquery.com/jquery-2.1.1.min.js" type="text/javascript" charset="utf-8"></script>
-  <link rel="stylesheet" href="./styles/main.css">
+
+  <!-- Place favicon.ico and apple-touch-icon.png in the root directory -->
+
+  <!-- build:css(.tmp) styles/main.css -->
+    <link rel="stylesheet" href="styles/main.css">
+  <!-- endbuild -->
 
 </head>
 
 <body>
-  
+  <!--[if lt IE 7]>
+     <p class="browsehappy">You are using an <strong>outdated</strong> browser. Please <a href="http://browsehappy.com/">upgrade your browser</a> to improve your experience.</p>
+   <![endif]-->
+   
   <header id="navbar">
     <h1 id="brand">
       <a class="name" href="#">GAB</a>
@@ -36,14 +44,44 @@
   </header>
   
   <main id="content">
-    <header class="temp">
-      <h1 class="title">Welcome Blah Blah Blah</h1>
-      <p class="description"></p>
-    </header>
-    <p class="body">Lorem ipsum dolor sit amet, consectetur adipisicing elit, sed do eiusmod tempor incididunt ut labore et dolore magna aliqua. Ut enim ad minim veniam, quis nostrud exercitation ullamco laboris nisi ut aliquip ex ea commodo consequat. Duis aute irure dolor in reprehenderit in voluptate velit esse cillum dolore eu fugiat nulla pariatur. Excepteur sint occaecat cupidatat non proident, sunt in culpa qui officia deserunt mollit anim id est laborum.</p>
+    <section class="placeholder">
+      <header>
+        <h1 class="title">G-A-B</h1>
+        <p class="description">Organize, Optimize And Enjoy Life!</p>
+      </header>
+      <p class="body">G-A-B is the stuff that makes stuff tough. We turn people like you into ultimate champions of the world. You are the fire that ignites the world, G-A-B is your buttler!</p>
+    </section>
   </main>
-  <script src="./scripts/data.js" type="text/javascript" charset="utf-8"></script>
-  <script src="./scripts/app.js"></script>
+  
+  <!-- Google Analytics -->
+   <script>
+     (function(i,s,o,g,r,a,m){i['GoogleAnalyticsObject']=r;i[r]=i[r]||function(){
+     (i[r].q=i[r].q||[]).push(arguments)},i[r].l=1*new Date();a=s.createElement(o),
+     m=s.getElementsByTagName(o)[0];a.async=1;a.src=g;m.parentNode.insertBefore(a,m)
+     })(window,document,'script','//www.google-analytics.com/analytics.js','ga');
+
+     ga('create', 'UA-10970225-13');
+     ga('send', 'pageview');
+  </script>
+  
+  <!-- build:js(.) scripts/oldieshim.js -->
+    <!--[if lt IE 9]>
+      <script src="bower_components/es5-shim/es5-shim.js"></script>
+      <script src="bower_components/json3/lib/json3.js"></script>
+      <script src="bower_components/vminpoly/vminpoly.js"></script>
+    <![endif]-->
+  <!-- endbuild -->
+  
+  <!-- build:js(.) scripts/vendor.js -->
+    <!-- bower:js -->
+    <script src="bower_components/jquery/dist/jquery.js"></script>
+    <!-- endbower -->
+  <!-- endbuild -->
+
+  <!-- build:js({.tmp,app}) scripts/scripts.js -->
+    <script src="scripts/data.js"></script>
+    <script src="scripts/app.js"></script>
+  <!-- endbuild -->
   
 </body>
 </html>
