--- a/app/index.html
+++ b/app/index.html
@@ -53,6 +53,46 @@
     </section>
   </main>
   
+  <script id="concierge-template" type="text/x-handlebars-template">
+    
+  </script>
+  
+  <script id="menu-template" type="text/x-handlebars-template">
+    <nav id="{{domid}}" class="menu">
+      {{#if isMain}}
+        <header class="menu-title" id="greeting">Greetings</header>
+      {{else}}
+        <header class="menu-title">
+          <a class="back" href="#main-menu"><i class="fa fa-chevron-left"></i></a>
+          <h1>{{title}}</h1>
+        </header>
+      {{/if}}
+      <ul class="actions">
+        {{render_actions actions}}
+      </ul>
+    </nav>
+  </script>
+  
+  <script id="action-template" type="text/x-handlebars-template">
+    <div>
+      <li id="{{domid}}" class="action">
+        <a class="inner" href="#{{href}}">
+          <div class="action-icon" style="background-image:url('{{icon}}')"></div>
+          <h1 class="action-title">{{title}}</h1>
+        </a>
+      </li>
+    </div>
+  </script>
+  
+  <script id="destination-template" type="text/x-handlebars-template">
+    <div class="destination">
+      <a class="inner" href="#{{href}}">
+        <div class="destination-icon" style="background-image:url('{{icon}}')"></div>
+        <h1 class="destination-title">{{title}}</h1>
+      </a>
+    </div>
+  </script>
+  
   <!-- Google Analytics -->
    <script>
      (function(i,s,o,g,r,a,m){i['GoogleAnalyticsObject']=r;i[r]=i[r]||function(){
@@ -75,6 +115,7 @@
   <!-- build:js(.) scripts/vendor.js -->
     <!-- bower:js -->
     <script src="bower_components/jquery/dist/jquery.js"></script>
+    <script src="bower_components/handlebars/handlebars.js"></script>    
     <!-- endbower -->
   <!-- endbuild -->
 
@@ -82,6 +123,8 @@
     <script src="scripts/data.js"></script>
     <script src="scripts/app.js"></script>
   <!-- endbuild -->
+  
+
   
 </body>
 </html>
