dist image fixes

--- a/app/index.html
+++ b/app/index.html
@@ -123,7 +123,6 @@
      (i[r].q=i[r].q||[]).push(arguments)},i[r].l=1*new Date();a=s.createElement(o),
      m=s.getElementsByTagName(o)[0];a.async=1;a.src=g;m.parentNode.insertBefore(a,m)
      })(window,document,'script','//www.google-analytics.com/analytics.js','ga');
-
      ga('create', 'UA-10970225-13');
      ga('send', 'pageview');
   </script>
@@ -132,7 +131,6 @@
     <!--[if lt IE 9]>
       <script src="bower_components/es5-shim/es5-shim.js"></script>
       <script src="bower_components/json3/lib/json3.js"></script>
-      <script src="bower_components/html5-history-api/history.js"></script>
     <![endif]-->
   <!-- endbuild -->
   
@@ -140,6 +138,9 @@
     <!-- bower:js -->
     <script src="bower_components/jquery/dist/jquery.js"></script>
     <script src="bower_components/handlebars/handlebars.js"></script>
+    <script src="bower_components/html5-history-api/history.js"></script>
+    <script src="bower_components/i18n/i18n.js"></script>
+    <script src="bower_components/basil.js/src/basil.js"></script>
     <!-- endbower -->
   <!-- endbuild -->
   <!-- <script src="bower_components/vminpoly/vminpoly.js"></script> -->
