Fixed grunt bugs, tweaked css, started implementing i18n, gh-pages + CNAME!

--- a/app/index.html
+++ b/app/index.html
@@ -40,8 +40,8 @@
       <a href="#">Concierge</a>
       <a href="#">Activity</a>
       <a href="#">Favorite</a>
-      <a href="#">EN</a>
-      <a href="#">FR</a>
+      <a class="lang-en" href="#">EN</a>
+      <a class="lang-fr" href="#">FR</a>
     </nav>
   </header>
   
