Title Enjoy Life

--- a/app/index.html
+++ b/app/index.html
@@ -5,7 +5,7 @@
   <meta charset="utf-8">
 
   <title>GAB</title>
-  <meta name="description" content="GAB Concierge App">
+  <meta name="description" content="GAB - Enjoy Life">
   <meta name="author" content="Francois Lafortune, @akrfranko">
   <meta name="viewport" content="width=device-width">
 
