--- a/app/index.html
+++ b/app/index.html
@@ -19,7 +19,7 @@
     <!-- endbuild -->
 
   </head>
-  <body ng-app="sqrApp" >
+  <body ng-app="gabApp" >
     <header id="topbar" class="site-head">
 
        <h1 class="brand" ng-controller="VisitorCtrl">
