--- a/gab/gab.html
+++ b/gab/gab.html
@@ -1,51 +1,34 @@
 <body>
-  <div class="container">
     {{#if currentUser}}
-      <input id="search" type="text" class="form-control" placeholder="Search">
-      <h1>Todo List ({{incompleteCount}})</h1>
-      
-      <label class="hide-completed">
-        <input type="checkbox" checked="{{hideCompleted}}" />
-        Hide Completed Tasks
-      </label>
+<div id="header">
+          <span class="glyphicon glyphicon-pencil pull-right" id="new" aria-hidden="true"></span>
+</div>
 
-
-      <form class="new-task">
-        <input type="text" name="text" placeholder="Type to add new tasks" />
-      </form>
-
-    <ul>
+<div id="wrapper">
+<div id="scroller">
+<ul id="thelist">
       {{#each tasks}}
         {{> task}}
       {{/each}}
-    </ul>
-
-        {{> logout}}
-{{else}}
-{{> loginButtons}}
-
-{{/if}}
-
-    </div><!-- /.container -->
-
-    <footer class="footer">
+</ul>
+</div>
+</div>
+<div id="footer">
       <div class="container">
         <ul class="list-inline">
-          <li><span class="glyphicon glyphicon-home black" aria-hidden="true"></span></li>
-          <li><span class="glyphicon glyphicon-user black" aria-hidden="true"></span></li>
-          <li><span class="glyphicon glyphicon-comment black" aria-hidden="true"></span></li>
-          <li><span class="glyphicon glyphicon-globe black" aria-hidden="true"></span></li>
-          <li><span class="glyphicon glyphicon-th black" aria-hidden="true"></span></li>
+          <li><span class="glyphicon glyphicon-home footer-icons" aria-hidden="true"></span></li>
+          <li><span class="glyphicon glyphicon-user footer-icons" aria-hidden="true"></span></li>
+          <li><span class="glyphicon glyphicon-comment footer-icons" aria-hidden="true" id="message-icon"></span></li>
+          <li><span class="glyphicon glyphicon-globe footer-icons" aria-hidden="true"></span></li>
+          <li><span class="glyphicon glyphicon-th footer-icons" aria-hidden="true"></span></li>
         </ul>
       </div>
-    </footer>
+</div>
+{{else}}
+{{> loginButtons}}
+{{/if}}
 
-  </body>
-
-<template name="logout">
-<button class="btn btn-default logout">Logout</button>
-</template>
-
+</body>
 
 <template name="task">
   <li class="{{#if checked}}checked{{/if}}">
@@ -55,4 +38,6 @@
 
     <span class="text">{{text}}</span>
   </li>
+
 </template>
+
