Foreign key with username accomplished

--- a/gab/gab.html
+++ b/gab/gab.html
@@ -33,6 +33,6 @@
 </template>
 
 <template name="post">
-    <li>{{ user_id }} - {{text}} <button type="button" class="delete close"><span>&times;</span></button></li>
+    <li>@{{ username author_id }} - {{text}}<button type="button" class="delete close"><span>&times;</span></button></li>
 </template>
 
