Logout on right icon

--- a/gab/gab.html
+++ b/gab/gab.html
@@ -6,9 +6,9 @@
         <ul class="list-inline">
           <li><span class="glyphicon glyphicon-home footer-icons" aria-hidden="true"></span></li>
           <li><span class="glyphicon glyphicon-user footer-icons" aria-hidden="true"></span></li>
-          <li><span class="glyphicon glyphicon-comment footer-icons" aria-hidden="true" id="message-icon"></span></li>
+          <li><span class="glyphicon glyphicon-comment footer-icons" aria-hidden="true"></span></li>
           <li><span class="glyphicon glyphicon-globe footer-icons" aria-hidden="true"></span></li>
-          <li><span class="glyphicon glyphicon-th footer-icons" aria-hidden="true"></span></li>
+          <li><span id="logout" class="glyphicon glyphicon-log-out footer-icons" aria-hidden="true"></span></li>
         </ul>
       </div>
     </div>
