--- a/gab/gab.html
+++ b/gab/gab.html
@@ -19,6 +19,17 @@
 
 <template name="content">
     <div id="wrapper">
+      <form class="new-post">
+       <input name="text" class="form-control input-lg" type="text" placeholder="{{_ "Update your public profile" }}">
+      </form>
+       <div id="profile_box">
+	<ul>
+        {{#each posts}}
+        {{> post}}
+	{{/each}}
+        </ul>
+       </div>
+
       {{> esInput index="users" placeholder="Search for friends" }}
       {{> search_results}}
 
@@ -35,25 +46,31 @@
 	{{> conversations}}
 	</ul>			    				    
       </div>
-      <form class="new-post">
-        <input name="text" class="form-control input-lg" type="text" placeholder="{{_ "Update your public profile" }}">
-      </form>
-
-      <div id="scroller">
+      {{> message_form}}
+       <div id="scroller">
          {{> conversation}}
          <ul>
-          {{#each posts}}
-            {{> post}}
+          {{#each messages}}
+            {{> message}}
           {{/each}}
         </ul>
-
-      </div>
+       </div>
 
     </div>
 </template>
 
+<template name="message_form">
+    <form id="new-message">
+      <input name="text" class="form-control input-lg" type="text" placeholder="{{_ "Parle-moi de toi?" }}">
+    </form>
+</template>
+
+
 <template name="post">
     <li>@{{ username author_id }} - {{text}}<button type="button" class="delete close"><span>&times;</span></button></li>
+</template>
+<template name="message">
+    <li>@{{ username author_id }} - {{text}}</li>
 </template>
 <template name="search_results">
   <div class="search_results">
@@ -77,7 +94,7 @@
       <li>
       {{username}}
       <button type="button" id="unfollow_button" class="friends_button glyphicon glyphicon-remove" aria-hidden="true"><span></span></button>
-      <button type="button" id="message_button" class="friends_button glyphicon glyphicon-comment" aria-hidden="true"><span></span></button>
+      <button type="button" id="new_conv" class="friends_button glyphicon glyphicon-comment" aria-hidden="true"><span></span></button>
       </li>
     
     {{/each}}
@@ -86,8 +103,9 @@
 <template name="conversations">
 {{ #each conversations }}
       <li>
-        {{participants}}
-        <button type="button" id="delete_conversation" class="friends_button glyphicon glyphicon-remove" aria-hidden="true"><span></span></button>
+        {{last_message this.id}}
+    <!--    <button type="button" id="delete_conversation" class="friends_button glyphicon glyphicon-remove" aria-hidden="true"><span></span></button>
+    -->
         <button type="button" id="open_conversation" class="friends_button glyphicon glyphicon-pencil" aria-hidden="true"><span></span></button>
       </li>
 
