--- a/gab/gab.html
+++ b/gab/gab.html
@@ -14,6 +14,23 @@
     </div>
   {{else}}
     {{> loginButtons}}
+    <div class="row">
+      <div class="col-xs-4">
+        <a href="#" class="thumbnail">
+          <img src="..." alt="...">
+        </a>
+      </div>
+      <div class="col-xs-4">
+        <a href="#" class="thumbnail">
+          <img src="..." alt="...">
+        </a>
+      </div>
+      <div class="col-xs-4">
+        <a href="#" class="thumbnail">
+          <img src="..." alt="...">
+        </a>
+      </div>
+    </div>
   {{/if}}
 </body>
 
