--- a/gab/gab.html
+++ b/gab/gab.html
@@ -13,22 +13,43 @@
       </div>
     </div>
   {{else}}
-    {{> loginButtons}}
+    <!-- Fixed navbar -->
+    <nav class="navbar navbar-inverse navbar-fixed-top">
+      <div class="container">
+        <div class="navbar-header">
+          <button type="button" class="navbar-toggle collapsed" data-toggle="collapse" data-target="#navbar" aria-expanded="false" aria-controls="navbar">
+            <span class="sr-only">Toggle navigation</span>
+            <span class="icon-bar"></span>
+            <span class="icon-bar"></span>
+            <span class="icon-bar"></span>
+          </button>
+          <a class="navbar-brand" href="#">Gab</a>
+        </div>
+        <div id="navbar" class="navbar-collapse collapse">
+          <ul class="nav navbar-nav navbar-right">
+            {{> loginButtons}} <!-- here -->
+          </ul>
+        </div><!--/.nav-collapse -->
+      </div>
+    </nav>
     <div class="row">
-      <div class="col-xs-4">
-        <a href="#" class="thumbnail">
-          <img src="..." alt="...">
-        </a>
+      <div class="col-xs-4 col-sm-2">
+        <img src="/arcade.svg" class="img-responsive" alt="Responsive image">
       </div>
-      <div class="col-xs-4">
-        <a href="#" class="thumbnail">
-          <img src="..." alt="...">
-        </a>
+      <div class="col-xs-4 col-sm-2">
+        <img src="/arcade.svg" class="img-responsive" alt="Responsive image">
       </div>
-      <div class="col-xs-4">
-        <a href="#" class="thumbnail">
-          <img src="..." alt="...">
-        </a>
+      <div class="col-xs-4 col-sm-2">
+        <img src="/arcade.svg" class="img-responsive" alt="Responsive image">
+      </div>
+      <div class="col-xs-4 col-sm-2">
+        <img src="/arcade.svg" class="img-responsive" alt="Responsive image">
+      </div>
+      <div class="col-xs-4 col-sm-2">
+        <img src="/arcade.svg" class="img-responsive" alt="Responsive image">
+      </div>
+      <div class="col-xs-4 col-sm-2">
+        <img src="/arcade.svg" class="img-responsive" alt="Responsive image">
       </div>
     </div>
   {{/if}}
