Borders and text to icons on front page

--- a/gab/gab.html
+++ b/gab/gab.html
@@ -54,22 +54,40 @@
     </nav>
     <div class="row">
       <div class="col-xs-4 col-sm-2">
-        <img src="/arcade.svg" class="img-responsive" alt="Responsive image">
+        <div class="icons">
+          <img src="/arcade.svg" class="img-responsive" alt="Responsive image">
+          <p>Hey</p>
+        </div>
       </div>
       <div class="col-xs-4 col-sm-2">
-        <img src="/arcade.svg" class="img-responsive" alt="Responsive image">
+        <div class="icons">
+          <img src="/angel-face.svg" class="img-responsive" alt="Responsive image">
+          <p>Hey</p>
+        </div>
       </div>
       <div class="col-xs-4 col-sm-2">
-        <img src="/arcade.svg" class="img-responsive" alt="Responsive image">
+        <div class="icons">
+          <img src="/broken-glasses.svg" class="img-responsive" alt="Responsive image">
+          <p>Hey</p>
+        </div>
       </div>
       <div class="col-xs-4 col-sm-2">
-        <img src="/arcade.svg" class="img-responsive" alt="Responsive image">
+        <div class="icons">
+          <img src="/fingers-crossed.svg" class="img-responsive" alt="Responsive image">
+          <p>Hey</p>
+        </div>
       </div>
       <div class="col-xs-4 col-sm-2">
-        <img src="/arcade.svg" class="img-responsive" alt="Responsive image">
+        <div class="icons">
+          <img src="/running-news.svg" class="img-responsive" alt="Responsive image">
+          <p>Hey</p>
+        </div>
       </div>
       <div class="col-xs-4 col-sm-2">
-        <img src="/arcade.svg" class="img-responsive" alt="Responsive image">
+        <div class="icons">
+          <img src="/tv-couch.svg" class="img-responsive" alt="Responsive image">
+          <p>Hey</p>
+        </div>
       </div>
     </div>
   {{/if}}
