--- a/gab/gab.html
+++ b/gab/gab.html
@@ -52,44 +52,46 @@
         </div><!--/.nav-collapse -->
       </div>
     </nav>
+  <div class="container-fluid">
     <div class="row">
       <div class="col-xs-4 col-sm-2">
         <div class="icons">
-          <img src="/arcade.svg" class="img-responsive" alt="Responsive image">
+          <img src="/arcade.svg" class="img" alt="Responsive image">
           <p>Hey</p>
         </div>
       </div>
       <div class="col-xs-4 col-sm-2">
         <div class="icons">
-          <img src="/angel-face.svg" class="img-responsive" alt="Responsive image">
+          <img src="/angel-face.svg" class="img" alt="Responsive image">
           <p>Hey</p>
         </div>
       </div>
       <div class="col-xs-4 col-sm-2">
         <div class="icons">
-          <img src="/broken-glasses.svg" class="img-responsive" alt="Responsive image">
+          <img src="/broken-glasses.svg" class="img" alt="Responsive image">
           <p>Hey</p>
         </div>
       </div>
       <div class="col-xs-4 col-sm-2">
         <div class="icons">
-          <img src="/fingers-crossed.svg" class="img-responsive" alt="Responsive image">
+          <img src="/fingers-crossed.svg" class="img" alt="Responsive image">
           <p>Hey</p>
         </div>
       </div>
       <div class="col-xs-4 col-sm-2">
         <div class="icons">
-          <img src="/running-news.svg" class="img-responsive" alt="Responsive image">
+          <img src="/running-news.svg" class="img" alt="Responsive image">
           <p>Hey</p>
         </div>
       </div>
       <div class="col-xs-4 col-sm-2">
         <div class="icons">
-          <img src="/tv-couch.svg" class="img-responsive" alt="Responsive image">
+          <img src="/tv-couch.svg" class="img" alt="Responsive image">
           <p>Hey</p>
         </div>
       </div>
     </div>
+  </div>
   {{/if}}
 </template>
 
